--- a/resep makanan.html
+++ b/resep makanan.html
@@ -46,35 +46,41 @@
     <section class="featured-recipes">
       <h2>Daftar Resep</h2>
 
-      <div class="card">
-        <img src="media/gambar/Nasi goreng/Nasi Goreng.jpg" alt="Nasi Goreng" />
-        <h3>Nasi Goreng (High Protein)</h3>
-        <a href="nasi goreng.html">Lihat Resep</a>
-      </div>
+     <div class="card">
+  <img src="media/gambar/Nasi goreng/Nasi Goreng.jpg" alt="Nasi Goreng" />
+  <h3>Nasi Goreng (High Protein)</h3>
+  <p>Nasi goreng sehat dengan tambahan protein tinggi dari ayam dan telur, cocok untuk menu sarapan bergizi.</p>
+  <a href="nasi goreng.html">Lihat Resep</a>
+</div>
 
-      <div class="card">
-        <img src="media/gambar/Ketoprak/Ketoprak.jpg" alt="Ketoprak" />
-        <h3>Ketoprak</h3>
-        <a href="ketoprak.html">Lihat Resep</a>
-      </div>
+<div class="card">
+  <img src="media/gambar/Ketoprak/Ketoprak.jpg" alt="Ketoprak" />
+  <h3>Ketoprak</h3>
+  <p>Hidangan khas Betawi berisi tahu, bihun, dan tauge disiram saus kacang gurih yang menggugah selera.</p>
+  <a href="ketoprak.html">Lihat Resep</a>
+</div>
 
-      <div class="card">
-        <img src="media/gambar/Pangsit goreng ayam/Pangsit Goreng Ayam.jpg" alt="Pangsit Goreng Ayam" />
-        <h3>Pangsit Goreng Ayam</h3>
-        <a href="pangsit goreng ayam.html">Lihat Resep</a>
-      </div>
+<div class="card">
+  <img src="media/gambar/Pangsit goreng ayam/Pangsit Goreng Ayam.jpg" alt="Pangsit Goreng Ayam" />
+  <h3>Pangsit Goreng Ayam</h3>
+  <p>Pangsit renyah berisi ayam cincang berbumbu, cocok sebagai camilan atau lauk pendamping.</p>
+  <a href="pangsit goreng ayam.html">Lihat Resep</a>
+</div>
 
-      <div class="card">
-        <img src="media/gambar/Donat kentang/Donat Kentang.jpg" alt="Donat Kentang" />
-        <h3>Donat Kentang</h3>
-        <a href="donat kentang.html">Lihat Resep</a>
-      </div>
+<div class="card">
+  <img src="media/gambar/Donat kentang/Donat Kentang.jpg" alt="Donat Kentang" />
+  <h3>Donat Kentang</h3>
+  <p>Donat empuk berbahan dasar kentang yang memberikan rasa lembut dan legit di setiap gigitan.</p>
+  <a href="donat kentang.html">Lihat Resep</a>
+</div>
 
-      <div class="card">
-        <img src="media/gambar/Telur kecap/Telur Kecap.jpg" alt="Telur Kecap" />
-        <h3>Telur Kecap</h3>
-        <a href="telur kecap.html">Lihat Resep</a>
-      </div>
+<div class="card">
+  <img src="media/gambar/Telur kecap/Telur Kecap.jpg" alt="Telur Kecap" />
+  <h3>Telur Kecap</h3>
+  <p>Telur rebus yang dimasak dengan kecap manis dan bumbu sederhana, cocok untuk makan praktis.</p>
+  <a href="telur kecap.html">Lihat Resep</a>
+</div>
+
     </section>
   </main>
 
