--- a/resep minuman.html
+++ b/resep minuman.html
@@ -47,28 +47,33 @@
       <h2>Daftar Minuman</h2>
 
       <div class="card">
-        <img src="media/gambar/Es Lumut/es lumut.jpeg" alt="Es Lumut" />
-        <h3>Es Lumut</h3>
-        <a href="es lumut.html">Lihat Resep</a>
-      </div>
+  <img src="media/gambar/Es Lumut/es lumut.jpeg" alt="Es Lumut" />
+  <h3>Es Lumut</h3>
+  <p>Minuman segar berbahan dasar agar-agar yang menyerupai lumut, cocok disajikan saat cuaca panas.</p>
+  <a href="es lumut.html">Lihat Resep</a>
+</div>
 
-      <div class="card">
-        <img src="media/gambar/Es Lemon Tea/es lemon tea.jpeg" alt="Es Lemon Tea" />
-        <h3>Es Lemon Tea</h3>
-        <a href="es lemon tea.html">Lihat Resep</a>
-      </div>
+<div class="card">
+  <img src="media/gambar/Es Lemon Tea/es lemon tea.jpeg" alt="Es Lemon Tea" />
+  <h3>Es Lemon Tea</h3>
+  <p>Perpaduan teh hitam dan perasan lemon segar, memberikan sensasi asam manis yang menyegarkan.</p>
+  <a href="es lemon tea.html">Lihat Resep</a>
+</div>
 
-      <div class="card">
-        <img src="media/gambar/Matcha Latte/matcha latte.jpeg" alt="Matcha Latte" />
-        <h3>Matcha Latte</h3>
-        <a href="matcha latte.html">Lihat Resep</a>
-      </div>
+<div class="card">
+  <img src="media/gambar/Matcha Latte/matcha latte.jpeg" alt="Matcha Latte" />
+  <h3>Matcha Latte</h3>
+  <p>Minuman creamy dengan rasa khas teh hijau Jepang dan susu, cocok dinikmati hangat atau dingin.</p>
+  <a href="matcha latte.html">Lihat Resep</a>
+</div>
 
-      <div class="card">
-        <img src="media/gambar/Teh Tarik/teh tarik.jpeg" alt="Teh Tarik" />
-        <h3>Teh Tarik</h3>
-        <a href="teh tarik.html">Lihat Resep</a>
-      </div>
+<div class="card">
+  <img src="media/gambar/Teh Tarik/teh tarik.jpeg" alt="Teh Tarik" />
+  <h3>Teh Tarik</h3>
+  <p>Teh susu khas Malaysia dengan buih lembut, dihasilkan dari proses “menarik” berulang kali.</p>
+  <a href="teh tarik.html">Lihat Resep</a>
+</div>
+
     </section>
   </main>
 
