--- a/index.html
+++ b/index.html
@@ -47,32 +47,46 @@
       <h2>Resep Unggulan Hari Ini</h2>
 
       <div class="card">
-        <h3>Nasi Goreng (High Protein)</h3>
-        <img src="media/gambar/Nasi goreng/Nasi Goreng.jpg" alt="Nasi Goreng" />
-        <p>Lezat, mudah dibuat, dan yang paling penting tinggi protein.</p>
-        <a href="nasi goreng.html">Lihat Resep</a>
-      </div>
+  <img src="media/gambar/Nasi goreng/Nasi Goreng.jpg" alt="Nasi Goreng" />
+  <h3>Nasi Goreng (High Protein)</h3>
+  <p>Nasi goreng sehat dengan tambahan protein tinggi dari ayam dan telur, cocok untuk menu sarapan bergizi.</p>
+  <a href="nasi goreng.html">Lihat Resep</a>
+</div>
+
+<div class="card">
+  <img src="media/gambar/Ketoprak/Ketoprak.jpg" alt="Ketoprak" />
+  <h3>Ketoprak</h3>
+  <p>Hidangan khas Betawi berisi tahu, bihun, dan tauge disiram saus kacang gurih yang menggugah selera.</p>
+  <a href="ketoprak.html">Lihat Resep</a>
+</div>
+
+<div class="card">
+  <img src="media/gambar/Pangsit goreng ayam/Pangsit Goreng Ayam.jpg" alt="Pangsit Goreng Ayam" />
+  <h3>Pangsit Goreng Ayam</h3>
+  <p>Pangsit renyah berisi ayam cincang berbumbu, cocok sebagai camilan atau lauk pendamping.</p>
+  <a href="pangsit goreng ayam.html">Lihat Resep</a>
+</div>
 
       <div class="card">
-        <h3>Ketoprak</h3>
-        <img src="media/gambar/Ketoprak/Ketoprak.jpg" alt="Ketoprak" />
-        <p>Hidangan khas Betawi yang kaya rasa, cocok untuk makan siang ringan.</p>
-        <a href="ketoprak.html">Lihat Resep</a>
-      </div>
+  <img src="media/gambar/Es Lemon Tea/es lemon tea.jpeg" alt="Es Lemon Tea" />
+  <h3>Es Lemon Tea</h3>
+  <p>Perpaduan teh hitam dan perasan lemon segar, memberikan sensasi asam manis yang menyegarkan.</p>
+  <a href="es lemon tea.html">Lihat Resep</a>
+</div>
 
-      <div class="card">
-        <h3>Pangsit Goreng Ayam <span class="tag">Versi Anak Kosan</span></h3>
-        <img src="media/gambar/Pangsit goreng ayam/Pangsit Goreng Ayam.jpg" alt="Pangsit Goreng Ayam" />
-        <p>Dengan bahan sederhana, kamu bisa bikin camilan enak dan hemat!</p>
-        <a href="pangsit goreng ayam.html">Lihat Resep</a>
-      </div>
+<div class="card">
+  <img src="media/gambar/Matcha Latte/matcha latte.jpeg" alt="Matcha Latte" />
+  <h3>Matcha Latte</h3>
+  <p>Minuman creamy dengan rasa khas teh hijau Jepang dan susu, cocok dinikmati hangat atau dingin.</p>
+  <a href="matcha latte.html">Lihat Resep</a>
+</div>
 
-      <div class="card">
-        <h3>Donat Kentang <span class="tag">Ramah Budget</span></h3>
-        <img src="media/gambar/Donat kentang/Donat Kentang.jpg" alt="Donat Kentang" />
-        <p>Lembut dan manis, cocok untuk sarapan atau bekal kuliah.</p>
-        <a href="donat kentang.html">Lihat Resep</a>
-      </div>
+<div class="card">
+  <img src="media/gambar/Teh Tarik/teh tarik.jpeg" alt="Teh Tarik" />
+  <h3>Teh Tarik</h3>
+  <p>Teh susu khas Malaysia dengan buih lembut, dihasilkan dari proses “menarik” berulang kali.</p>
+  <a href="teh tarik.html">Lihat Resep</a>
+</div>
     </section>
   </main>
 
