--- a/tentang kami&kontak.html
+++ b/tentang kami&kontak.html
@@ -66,9 +66,8 @@
     <p>
       Kami adalah tim kecil yang terdiri dari koki rumahan, penulis kuliner, dan pengembang web yang antusias dalam berbagi pengetahuan memasak secara online.
     </p>
-
-    Jika ada yang ingin Anda tanyakan mengenai situs resep,
-      silakan hubungi kami melalui kontak berikut ini.
+    <P>
+    Jika ada yang ingin Anda tanyakan mengenai situs resep, silakan hubungi kami melalui kontak berikut ini.
     </p>
 
     <section>
